fix(core): form control alignment and icon
- fix vertical alignment for inline type controls
- add icon side demos

--- a/src/range/range.css
+++ b/src/range/range.css
@@ -1,4 +1,5 @@
 :host {
+  --control-height: var(--nve-ref-size-800);
   --cursor: pointer;
   width: 100%;
 }
